test/libsolidity/syntaxTests/pragma/blank_space_version.sol
pragma solidity ;
// ----
// ParserError 1684: (0-17): Invalid version pragma. Empty version pragma.
